--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group = 'org.example'
 version = '1.0-SNAPSHOT'
+sourceCompatibility = '21'
 
 repositories {
     mavenCentral()
@@ -11,9 +13,18 @@ repositories {
 
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.11.3'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.14.2'
+    implementation group: 'com.opencsv', name: 'opencsv', version: '5.9'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '3.4.0'
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.4.0'
+    implementation group: 'org.springframework', name: 'spring-context', version: '6.2.1'
+}
+
+application {
+    mainClassName = 'org.example.Main'
 }
 
 test {
     useJUnitPlatform()
-}
+   }
